- fix font - use svg to make github logo less blurry - simplify some spacing with padding - reduce corner rounding - update some text

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -33,7 +33,7 @@
 html {
   -webkit-text-size-adjust: 100%;
   box-sizing: border-box;
-  font: serif;
+  /* font: serif; */
   font-size: var(--font-md);
   line-height: var(--line-height-normal);
   overflow-y: scroll;
@@ -43,7 +43,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: var(--color-text);
-  font-family: serif;
+  /* font-family: serif; */
   font-family: var(--font-serif);
   font-weight: normal;
   margin: 0;
@@ -79,7 +79,7 @@ dfn {
 }
 h1 {
   margin: 0;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
   padding: 0;
   line-height: var(--line-height-dense);
   letter-spacing: -0.01em;
